--- a/static/index.html
+++ b/static/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome FFMPEG Service</title>
-    <script type="text/javascript">
-        function handleSubmit() {
-            var action = document.querySelector('select[name="videoAction"]').value;
-            switch(action) {
-                case "Convert":
-                    window.location.href = '/convert';
-                    break;
-                case "Cut":
-                    window.location.href = '/cut';
-                    break;
-                case "Watermark":
-                    window.location.href = '/watermark';
-                    break;
-                case "GIF":
-                    window.location.href = '/gif';
-                    break;
-                default:
-                    alert('Please select an action');
-                    return false;
-            }
-            return false;
-        }
-    </script>
+<!--    <script type="text/javascript">-->
+<!--        function handleSubmit() {-->
+<!--            var action = document.querySelector('select[name="videoAction"]').value;-->
+<!--            switch(action) {-->
+<!--                case "Convert":-->
+<!--                    window.location.href = '/convert';-->
+<!--                    break;-->
+<!--                case "Cut":-->
+<!--                    window.location.href = '/cut';-->
+<!--                    break;-->
+<!--                case "Watermark":-->
+<!--                    window.location.href = '/watermark';-->
+<!--                    break;-->
+<!--                case "GIF":-->
+<!--                    window.location.href = '/gif';-->
+<!--                    break;-->
+<!--                default:-->
+<!--                    alert('Please select an action');-->
+<!--                    return false;-->
+<!--            }-->
+<!--            return false;-->
+<!--        }-->
+<!--    </script>-->
     <style>
         body {
             font-family: Arial, sans-serif;
