--- a/static/convert/index.html
+++ b/static/convert/index.html
@@ -2,9 +2,64 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Convert page</title>
+    <title>Conversion</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: url("../background/bg.png") no-repeat center center fixed;
+            background-size: cover;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            border: 2px solid #000;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.3);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            width: 400px;
+            height: 300px;
+            margin: 0;
+
+        }
+        h2{
+            font-size: 20px;
+        }
+
+        form {
+            margin-top: 15px;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the conversion page</h1>
+<div class="container">
+    <h2>Welcome to the Conversion Service</h2>
+    <p> This service let's you convert a video using FFMPEG from your browser!</p>
+    <label>Choose the file that you want to convert to MP4 format</label>
+    <form action="http://localhost:8085" method="post" enctype="multipart/form-data">
+        <div>
+            <label>Upload File</label>
+            <input type="file" id="File" accept="video/*" name="Myfile">
+        </div>
+        <div>
+            <button>Submit</button>
+        </div>
+
+    </form>
+
+
+</div>
 </body>
 </html>
