--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Awesome FFMPEG Service</title>
@@ -71,7 +71,7 @@
     <h2>Welcome to the Awesome FFMPEG Service</h2>
     <p> This service let's you use FFMPEG library in your browser</p>
     <label>Choose the option that you want to use</label>
-    <form onsubmit="return handleSubmit()">
+    <form action="/videoAction" method="post">
         <label>
             <select name="videoAction">
                 <option value="">Select an action</option>
