--- a/static/convert/index.html
+++ b/static/convert/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Conversion</title>
     <style>
         body {
@@ -12,13 +13,13 @@
             padding: 0;
         }
         .container {
-            border: 2px solid #000;
+            border: 10px solid #000;
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.3);
-            border-radius: 10px;
+            border-radius: 50px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            width: 400px;
-            height: 300px;
+            width: 700px;
+            height: 500px;
             margin: 0;
 
         }
@@ -47,11 +48,17 @@
 <div class="container">
     <h2>Welcome to the Conversion Service</h2>
     <p> This service let's you convert a video using FFMPEG from your browser!</p>
+    <p>For the simplicity sake I currently support from mp4 as input</p>
     <label>Choose the file that you want to convert to MP4 format</label>
-    <form action="/upload" method="post" enctype="multipart/form-data">
+    <form action="/upload" method="post" enctype="multipart/form-data" >
         <div>
             <label>Upload File</label>
-            <input type="file" id="File"  name="Myfile">
+            <input type="file" id="File"  name="Myfile" accept="video/mp4" >
+            <label>
+                <select name="userchoice">
+                    <option value="mp3">Convert to mp3</option>
+                </select>
+            </label>
         </div>
         <div>
             <button type="submit">Submit</button>
