--- a/ETC/index.html
+++ b/ETC/index.html
@@ -45,8 +45,8 @@
 </head>
 <body>
 <div class="container">
-    <h2>Welcome to the Awesome FFMPEG Service</h2>
-    <p> This service let's you use FFMPEG library in your browser</p>
+    <h2>Welcome to the Video Conversion Service</h2>
+    <p> This service let's you convert your videos in your browser</p>
     <label>Choose the option that you want to use</label>
     <form action="/videoAction" method="post">
         <label>
